# pairo

./: .gitattributes  .gitignore  .markdownlint.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: 01_basic.py
src/pairo/: __init__.py  cli.py  core.py  normalize.py  schemas.py  usage.py
src/pairo/blockers/: __init__.py  base.py  fuzzy.py
src/pairo/matchers/: __init__.py  base.py  llm.py
tests/: test_blocker.py  test_core.py  test_normalize.py
